...
    android:layout_width="match_parent"
    android:background="@drawable/metal"
    android:layout_height="match_parent"
    tools:context=".ControladorRegistro">

    <Button
        android:id="@+id/button_vRegInicio"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
...
        android:onClick="regresoInicioSesion"
        android:text="@string/texto_regresoinicio"
        android:textColor="@color/lightGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_vRegContra" />

    <Button
        android:id="@+id/button_vRegRegistrar"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
...
        android:layout_marginLeft="32dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:textSize="18sp"
        android:inputType="textPassword|textNoSuggestions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_vRegUsuario" />

    <TextView
        android:id="@+id/textView_vRegBienvenido"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="73dp"
        android:text="@string/texto_bienvenida"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_vRegIngreseUC"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/texto_registro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_vRegBienvenido" />

    <TextView
        android:id="@+id/textView_vRegContra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/contra"
        android:textSize="19sp"
...
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_vRegIngreseUC" />

    <TextView
        android:id="@+id/textView_vRegUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/usuario"
        android:textSize="19sp"
...
