...
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="160dp"
        android:ems="10"
        android:inputType="textNoSuggestions|textVisiblePassword"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/comenzar_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Palabra_modelo"
...
