...
        android:focusableInTouchMode="true"
        android:textColor="@color/black"
        android:alpha="0.85"
        android:ems="10"
        android:inputType="textNoSuggestions|textVisiblePassword"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/comenzar_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Palabra_modelo"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/menuPrincipal_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
...
