...
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/stadistic_table"
        android:layout_width="match_parent"
        android:layout_height="542dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:background="#FFF5D8"
        app:layout_constraintStart_toStartOf="parent"
...
