...
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/contra"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_vInicioContra"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_vInicioUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/usuario"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_vInicioUsuario"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.65"
        android:contentDescription="@string/descript_logo"
...
        android:maxLength="20"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_vInicioUsuario" />

    <Button
        android:id="@+id/button_vInicioIngresar"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
...
