...
    android:layout_width="match_parent"
    android:background="@drawable/metal"
    android:layout_height="match_parent"
    tools:context=".ControladorSeleccionNivel">

    <TextView
        android:id="@+id/textView_vSelNivTexto"
        android:layout_width="318dp"
        android:layout_height="80dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="49dp"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_vSelNivSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="485dp"
        android:layout_marginEnd="8dp"
...
